--- a/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
@@ -22,7 +22,7 @@
                 <Insets top="10" right="10" bottom="10" left="10"/>
             </padding>
 
-            <ImageView  fx:id="bikeImage" pickOnBounds="true" preserveRatio="true" fitHeight="350"/>
+            <ImageView fx:id="bookableImage" pickOnBounds="true" preserveRatio="true" fitHeight="350"/>
 
         </VBox>
 
