--- a/src/main/resources/uk/ac/roehampton/ziparound/application/modules/header.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/modules/header.fxml
@@ -17,7 +17,7 @@
         <ImageView fitWidth="40"
                    fitHeight="40"
                    preserveRatio="true">
-            <Image url="@../logo/logo_circular.png"/>
+            <Image url="@../imgs/logo_circular.png"/>
         </ImageView>
 
         <Label text="ZipAround"
