Commented all sprint 3 files

--- a/src/main/resources/uk/ac/roehampton/ziparound/application/booking-creation-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/booking-creation-view.fxml
@@ -34,10 +34,11 @@
 
                         <Region HBox.hgrow="ALWAYS"/>
 
-                        <Label fx:id="hintText"/>
+                        <Label fx:id="hintText" text="Please select an item."/>
                         <Button text="Next"
                                 styleClass="main"
                                 fx:id="nextButton"
+                                disable="true"
                                 onAction="#next"/>
                     </HBox>
                 </VBox>
