--- a/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
@@ -117,7 +117,7 @@
 
                 <Button text="Cancel"
                         fx:id="cancelButton"
-                        onAction="#cancel"
+                        onAction="#hideShowButtons"
                         styleClass="main, red"/>
             </HBox>
 
